fixed margin/padding distortion

--- a/src/App.css
+++ b/src/App.css
@@ -58,19 +58,18 @@
 
 #content-container > #name {
   border-bottom: solid 2px rgb(0, 166, 255);
-  margin-bottom: 5%;
 }
 
 #demographics-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 5%;
+  height: 30%
 }
 
 .demographics-information {
   display: flex;
-  padding-top: 2%;
+  padding-top: 6px;
 }
 
 .demographics-information > h4 {
@@ -82,6 +81,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
+  height: 30%;
 }
 
 #favorites-container > ol {
@@ -90,7 +90,7 @@
 }
 #favorites-container > ol > li {
   text-align: left;
-  padding-top: 1%;
+  padding-top: 3px;
 }
 
 #button-bar-container {
@@ -111,7 +111,7 @@
 }
 
 .function-buttons {
-  padding: 1% 3% 1% 3%;
+  padding: 6px 18px 6px 18px;
   min-height: 30px;
   height: 33%;
   border-radius: 14px;
